# cargo-ecos

./: .gitignore  Cargo.toml  README.md  package.rs
src/: main.rs
src/cmd/: build.rs  clean.rs  config.rs  flash.rs  init.rs  install.rs  mod.rs
src/templates/: mod.rs
templates/: README.md
templates/c1/: Cargo.toml  README  hk.cargo.toml
templates/c1/src/: main.rs
templates/k1/: README.md
templates/l3/: hk.cargo.toml
