[package]
name = "cargo-ecos"
version = "0.1.8"
edition = "2024"
description = "ECOS embedded project cargo plugin"
authors = ["leocheng <chengkelfan@qq.com>"]
repository = "https://github.com/ECOS-C1-SDK4Heke/cargo-ecos.git"
license = "MIT OR Apache-2.0"

include = [
    "Cargo.toml",
    "README.md",
    "package.rs",
    "src/**/*",
    "templates/**/*",
    "templates/**/.*",
    "templates/**/.*/*",
]

build = "package.rs"

[features]
default = []
dev = ["install"]
install = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
console = "0.16"
dialoguer = "0.12"
fs_extra = "1.3"
indicatif = "0.18"
lazy_static = "1.5"
regex = "1.12"
thiserror = "2.0"
toml = "0.9.11"
walkdir = "2.5"
include_dir = "0.7"
dirs = "6.0"
chrono = "0.4"
humansize = "2.1"

[build-dependencies]
built = "0.8"

 [package.metadata]
default-features = false
